small fixes: toggle color adjustment, remove colon, prevent label wrapping

--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -101,7 +101,7 @@ input[type="submit"].highlight{ background:#ffc100; border:1px solid #db0; text-
 /* NEEDED FOR INFIELD LABELS */
 p.infield { position: relative; }
 label.infield { cursor: text !important; }
-#login form label.infield { position:absolute; font-size:1.5em; color:#AAA; }
+#login form label.infield { position:absolute; font-size:19px; color:#aaa; white-space:nowrap; }
 #login #dbhostlabel, #login #directorylabel { display:block; margin:.95em 0 .8em -8em; }
 #login form input[type="checkbox"]+label { position:relative; margin:0; font-size:1em; text-shadow:#fff 0 1px 0; }
 #login form .errors { background:#fed7d7; border:1px solid #f00; list-style-indent:inside; margin:0 0 2em; padding:1em; }
@@ -109,8 +109,7 @@ label.infield { cursor: text !important; }
 #login form #selectDbType { text-align:center; }
 #login form #selectDbType label { position:static; font-size:1em; margin:0 -.3em 1em; cursor:pointer; padding:.4em; border:1px solid #ddd; font-weight:bold; background:#f8f8f8; color:#555; text-shadow:#eee 0 1px 0; -moz-box-shadow:0 1px 1px #fff, 0 1px 1px #fff inset; -webkit-box-shadow:0 1px 1px #fff, 0 1px 1px #fff inset; }
 #login form #selectDbType label span { cursor:pointer; font-size:0.9em; }
-#login form #selectDbType label.ui-state-hover span, #login form #selectDbType label.ui-state-active span { color:#000; }
-#login form #selectDbType label.ui-state-hover, #login form #selectDbType label.ui-state-active { color: #333; background-color: #ccc; }
+#login form #selectDbType label.ui-state-hover, #login form #selectDbType label.ui-state-active { color:#000; background-color:#e8e8e8; }
 
 
 /* NAVIGATION ------------------------------------------------------------- */
